src/test/deca/context/invalid/created/Objet/Passe_2/VoidField.deca
// Description:
//    teste la definition d'un field de type void
// Resultats:
//    Erreur contextuelle
//    Ligne 8 : Error: void cannot be used as a type for field declaration

class C {
    void a;
}

{

}